# universal-diffsae

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt
diffsae/sae/: sae.py  trainer.py  utils.py
diffsae/scripts/: train.py
notebooks/: ablate_blocks.ipynb  ablate_blocks_sd3.ipynb  example_diffusers.ipynb  train_regression.ipynb
src/hooked_model/: hooked_model.py  hooked_model_sd3.py  hooks.py  scheduler.py  utils.py
src/probes/: probes.py
src/sae/: cache_activations_runner.py  cache_activations_runner_sd3.py  config.py  sae.py  trainer.py  utils.py
src/scripts/: collect_activations.py  collect_activations_sd3.py  prepare_and_merge_latents_ds.py  probes_per_intervention_indices.py  probes_plot_metrics.py  probes_plots_coefs.py  probes_predict_top_coef.py  probes_top_coef_plot.py  regression_plots.py  sae_get_max_latatent_activations.py  sae_latents_from_activations.py  train.py  train_probes.py  train_probes_sklearn.py
src/tools/: dataset.py
